<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Octo</string>
    <string name="log_in_title">Log In</string>
    <string name="test">test</string>
    <string name="action_sign_up">No account ? Sign up here</string>
    <string name="input_username_hint">BoogeymanJace</string>
    <string name="input_password_hint">Password</string>
    <string name="input_password_hint_new">New password</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="octo_app_description">Welcome to Octo, you very own personal Magic The Gathering card manager.</string>
    <string name="input_first_name_hint">Gideon</string>
    <string name="input_last_name_hint">Jura</string>
    <string name="input_username_hint_sign_up">JuraOfJustice159</string>
    <string name="more_information_title">Tell Us More About You</string>
    <string name="more_information_question_guild">In the Ravnica blocks, which guild represents you the most ?</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_username">Username</string>
    <string name="password_hint">*********</string>
    <string name="octo_logo_description">Octo log</string>
    <string name="more_information_question_color">Amongst the six colors of Magic, which do you prefer the most  personally ?</string>
    <string name="colorless_mana_description" tools:ignore="StringEscaping">The color of artifacts, Eldrazi and Sam's deck, yeah that one.</string>
    <string name="red_mana_description">The color of fire and burn spells. Yeah just bolt the bird.</string>
    <string name="blue_mana_description">The color of countering spells and making friends quit the game.</string>
    <string name="green_mana_description">The color of making big creatures and swinging with them sideways.</string>
    <string name="white_mana_description">The color of living your best game by casting cats and gaining life.</string>
    <string name="black_mana_description">The color of self harm four gaining more resources than your enemies. Oh and there are demons to.</string>
    <string name="sign_up_error">Your sign up information\'s are invalid</string>
    <string name="username_taken_error">This username is already taken</string>
    <string name="log_in_error">Invalid credentials</string>
    <string name="default_card_placeholder">Surgical extraction</string>
    <string name="default_card_set_placeholder">Modern Masters 2015</string>
    <string name="default_card_price_placeholder">0.94$</string>
    <string name="default_card_artist_placeholder">Steven Belledin</string>
    <string name="action_log_off">Log out</string>
    <string name="drawer_menu_random_cards">Cards</string>
    <string name="drawer_menu_commander">Commanders</string>
    <string name="drawer_menu_artists">Artists</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="drawer_menu_whishlist">My wishlist</string>
    <string name="default_cart_type_line">Instant</string>
    <string name="default_mana_cost">Cost : {B/P}</string>
    <string name="wishlist_button_description">Action to add this card to wishlist</string>
    <string name="default_card_oracle_text">({B/P} can be paid with either {B} or 2 life.)\nChoose target card in a graveyard other than a basic land card. Search its owner\'s graveyard, hand, and library for any number of cards with the same name as that card and exile them. Then that player shuffles.</string>
    <string name="default_card_release">Released on 2015–05-22</string>
    <string name="default_converted_mana_cost">Cmc : 1.0</string>
    <string name="legalities_title">Legalities</string>
    <string name="collector_information_title">Collector info</string>
    <string name="default_card_is_reserved">Reserved</string>
    <string name="default_collector_number">Collector number : 99</string>
    <string name="default_edhrec_rank">Edhrec rank : 13884</string>
    <string name="default_legality">Modern</string>
    <string name="default_power">2</string>
    <string name="wish_list_title">Add card to wish list</string>
    <string name="wish_list_title_placeholder">How many copies of Surgical Extraction would you like to add to your wish list ?</string>
    <string name="wish_list_quantity_input_place_holder">1</string>
    <string name="total_wish_list_placeholder">107,96$</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_deny">Cancel</string>
    <string name="default_card_quantity">4</string>
    <string name="action_buy_card_description">Click this icon to launch the website to buy this card</string>
    <string name="default_username">Itz_Odd</string>
    <string name="personal_credentials_title">Modify profile</string>
    <string name="default_firstname_placeholder">Joshua</string>
    <string name="input_email_hint_default">gidigidi@zandikar.com</string>
    <string name="input_email_hint">Email</string>
    <string name="action_change_credentials">Save</string>
    <string name="action_personal_account">My account</string>
    <string name="artist_activity_title">Here are some of the most renown Magic The Gathering artists</string>
</resources>