<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/cardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/default_card_placeholder"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/cardQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/default_card_quantity" />

    <TextView
        android:id="@+id/cardTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/default_card_price_placeholder" />

    <ImageView
        android:id="@+id/actionBuyCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_buy_card_description"
        android:src="@drawable/ic_shopping_cart" />

</LinearLayout>
