<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/ice_blue"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/wish_list_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/wishListTitle"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/wish_list_title_placeholder"
        android:textAlignment="center"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:paddingStart="72dp"
        android:paddingEnd="52dp">

        <EditText
            android:id="@+id/inputNbrCopies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/wish_list_quantity_input_place_holder"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_wish_list_placeholder"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="108dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/action_confirm" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pale_red"
            android:text="@string/action_deny" />

    </LinearLayout>

</LinearLayout>