<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".views.connexion.LogInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_octofulllogo"
        app:tint="@color/main_red" />

    <TextView
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/log_in_title"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/usernameInput"
        style="@style/Theme.MaterialComponents.DayNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/ic_person_outline"
        android:drawablePadding="8dp"
        android:hint="@string/input_username_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/Theme.MaterialComponents.DayNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_fingerprint"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/actionSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/main_blue"
        android:text="@string/action_sign_up"
        android:layout_marginBottom="32dp"
        android:gravity="center" />

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_arrow_forward"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/pale_red"
        style="@style/Widget.MaterialComponents.TimePicker.ImageButton" />

</LinearLayout>